# BetterCast

./: .gitignore  AudioPlayerIOS.swift  BetterCastIcon.icns  BetterCastReceiverIOS_Unsigned.ipa  BetterCastReceiverIOS_Unsigned_v2.ipa  BetterCastSender-Info.plist  Package.swift  README.md  RELEASE_NOTES_v2.md  RELEASE_NOTES_v3.md  RELEASE_NOTES_v4.md  build_log.txt  make_app.sh  package_ios_ipa.sh
.github/workflows/: build-linux-receiver.yml  build-windows-receiver.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/stephenlovino.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/package.xcworkspace/xcuserdata/stephenlovino2.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/stephenlovino.xcuserdatad/xcschemes/: xcschememanagement.plist
.swiftpm/xcode/xcuserdata/stephenlovino2.xcuserdatad/xcschemes/: xcschememanagement.plist
BetterCastReceiver.app/Contents/: Info.plist
BetterCastReceiver.app/Contents/MacOS/: BetterCastReceiver
BetterCastSender.app/Contents/MacOS/: BetterCastSender
BetterCastSender.app/Contents/Resources/: AppIcon.icns
BetterCastSender.app/Contents/_CodeSignature/: CodeResources
Sources/BetterCastReceiver/: BetterCastReceiverApp.swift  InputEvent.swift  VideoDecoder.swift  VideoRenderer.swift
Sources/BetterCastReceiverDesktop/: AdbHelper.cpp  AdbHelper.h  AudioDecoder.cpp  AudioPlayer.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NetworkListener.cpp  NetworkListener.h  ServiceDiscovery.cpp  ServiceDiscovery.h  Version.h.in  VideoDecoder.cpp  VideoDecoder.h  VideoRenderer.cpp  app.rc.in  installer.nsi  main.cpp
Sources/BetterCastReceiverDesktop/sender/: NetworkSender.cpp  NetworkSender.h  ScreenCaptureWin.cpp  ScreenCaptureWin.h  SenderController.cpp  SenderController.h  VideoEncoderFF.cpp  VirtualDisplayVDD.cpp  VirtualDisplayVDD.h
Sources/BetterCastReceiverIOS/: AppDelegate.swift  AudioPlayerIOS.swift  Constants.swift  Info.plist  InputEvent.swift  MinimalViewController.swift  NetworkListenerIOS.swift  VideoDecoder.swift  VideoRendererViewIOS.swift  ViewController.swift
Sources/BetterCastSender/: AudioEncoder.swift  BetterCastSenderApp.swift  Constants.swift  InputEvent.swift  InputHandler.swift  LogManager.swift  ReceiverMode.swift  ReceiverNetworkListener.swift  ReceiverVideoDecoder.swift  ScreenRecorder.swift  VideoEncoder.swift  VirtualDisplayManager.swift
